--- a/ureport/templates/ureport/partials/viz/piechart_module.html
+++ b/ureport/templates/ureport/partials/viz/piechart_module.html
@@ -3,6 +3,6 @@
     </div>
 </div>
 <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
-<script language="javscript">
-    plot_piechart('{{ poll.pk }}', '_{{ poll.pk }}');
+<script language="javascript">
+    plot_piechart_module('{{ poll.pk }}', '_{{ poll.pk }}');
 </script>
