--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -10,7 +10,7 @@
     {{ block.super }}
     <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
-    <script src="{{MEDIA_URL}}poll/javascripts/poll.js" type="text/javascript"></script>
+    <script src="{{MEDIA_URL}}poll/javascripts/polls.js" type="text/javascript"></script>
     <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key={{ map_key }}" type="text/javascript"></script>
     <script language="javascript">
     //get the map bounding box
