minor bug fixes

--- a/ureport/templates/ureport/bulk_contact_upload.html
+++ b/ureport/templates/ureport/bulk_contact_upload.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}
-    Ureport Messaging History - {{ block.super }}
+    Ureport Bulk Contacts Upload - {{ block.super }}
 {% endblock %}
 {% block stylesheets %}
     {{ block.super }}
