tag cloud fixes

--- a/ureport/templates/ureport/partials/tag_cloud/ignored_tags.html
+++ b/ureport/templates/ureport/partials/tag_cloud/ignored_tags.html
@@ -1,16 +1,14 @@
   <h4>Excluded tags</h4>
 {%  for tag in tags%}
-
-         <a  href="javascript:void(0)">{{ tag.name }}</a><span class="delete-tag" onmouseover="$(this).attr('class', 'delete-tag-hover')" onmouseout="$(this).attr('class', 'delete-tag')" title="Remove from excluded" onclick="remove_tag('{{ tag.name }}')"></span>
-
+     <a href="javascript:void(0)">{{ tag.name }}</a>
+     <span class="delete-tag" onmouseover="$(this).attr('class', 'delete-tag-hover')" onmouseout="$(this).attr('class', 'delete-tag')" title="Remove from excluded" onclick="remove_tag('{{ tag.name }}')"></span>
 {%  endfor %}
-<p><a onclick="back()" href="javascript:void(0)">Back to tagcloud</a> </p>
-
-  <script language="javascript"  >
-      function back()
-      {
-   $('#excluded').remove();
-   console.log(tag_poll_pk);
-  load_tag_cloud(tag_poll_pk);
-      }
-  </script>
+<p>
+    <a onclick="back()" href="javascript:void(0)">Back to tagcloud</a>
+</p>
+<script language="javascript">
+    function back() {
+        $('#excluded').hide();
+        load_tag_cloud(tag_poll_pk);
+    }
+</script>
