urllized best_visualization in ureport

--- a/ureport/templates/ureport/poll_summary.html
+++ b/ureport/templates/ureport/poll_summary.html
@@ -14,7 +14,7 @@
                                 <a class="poll_selectors"
                                    href="javascript:void(0)"
                                    id="diplay_{{ p.pk }}"
-                                   onclick="$('.poll_selectors').attr('disabled','');$(this).attr('disabled','disabled');$('#poll_content').load('/ureport/bestviz/?pks=+{{ p.pk }}')">
+                                   onclick="$('.poll_selectors').attr('disabled','');$(this).attr('disabled','disabled');$('#poll_content').load('{% url ureport.views.best_visualization p.pk %}')">
                                 {{ p.name }}
                                 </a>
                             </li>
@@ -36,6 +36,6 @@
 </div>
 <script language="javascript">
     $($('.poll_selectors')[0]).attr('disabled','disabled');
-    $('#poll_content').load('/ureport/bestviz/?pks=+{{ polls.0.pk }}');
+	$('#poll_content').load('{% url ureport.views.best_visualization polls.0.pk %}');
 </script>
 {% endblock %}
