--- a/ureport/templates/ureport/partials/viz/piechart.html
+++ b/ureport/templates/ureport/partials/viz/piechart.html
@@ -4,5 +4,5 @@
 </div>
 <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
 <script language="javascript">
-    load_piechart('{{ poll.pk }}', 'pie_{{ poll.pk }}');
+    load_piechart('{{ poll.pk }}', 'pie_{{ poll.pk }}', '{% url poll.views.stats poll.pk %}');
 </script>
