--- a/ureport/templates/ureport/partials/contacts/contacts_row.html
+++ b/ureport/templates/ureport/partials/contacts/contacts_row.html
@@ -2,7 +2,7 @@
 {% block remaining_row_content %}
     <td>
         {% if object.default_connection %}
-            <a href="/ureport/{{ object.default_connection.pk }}/message_history/">
+            <a href="{% url ureport.views.view_message_history object.default_connection.pk %}">
         {% endif %}
         {{ object.name }}
         {% if object.default_connection %}
