--- a/ureport/templates/ureport/partials/polls/response_row.html
+++ b/ureport/templates/ureport/partials/polls/response_row.html
@@ -1,7 +1,7 @@
 {% extends row_base %}
 {% block message_information %}
     <td class="response_sender_col">
-      <a href="/ureport/{{ response.message.connection.pk }}/message_history/">
+      <a href="{% url ureport.views.view_message_history response.message.connection.pk %}">
           {% if response.message.connection.contact %}
             {{ response.message.connection.contact }} (
           {% endif %}
