--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -13,7 +13,7 @@
         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/tables.css" />
         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/forms.css" />
         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
-        <link type="text/css" rel="stylesheet" href="/static/ureport/stylesheets/ureport.css"/>
+        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css"/>
         {% endblock %}
 
         {% block javascripts %}
