--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -7,11 +7,12 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}poll/stylesheets/style.css" />
 {% endblock %}
 {% block javascripts %}
-    {{ block.super }}
     <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
-    <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
     <script src="{{MEDIA_URL}}poll/javascripts/polls.js" type="text/javascript"></script>
-    <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key={{ map_key }}" type="text/javascript"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
+    <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
+    {{ block.super }}
     <script language="javascript">
     //get the map bounding box
         var map;
