--- a/ureport/templates/ureport/two-column.html
+++ b/ureport/templates/ureport/two-column.html
@@ -7,8 +7,9 @@
 {% endblock %}
 {% block javascripts %}
     {{ block.super }}
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
-    <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key={{ map_key }}" type="text/javascript"></script>
     <script language="javascript">
     //get the map bounding box
         var map;
