minor fix to polls page

--- a/ureport/templates/ureport/poll_summary.html
+++ b/ureport/templates/ureport/poll_summary.html
@@ -14,7 +14,7 @@
                                 <a class="poll_selectors"
                                    href="javascript:void(0)"
                                    id="diplay_{{ p.pk }}"
-                                   onclick="$('.poll_selectors').attr('disabled','');$(this).attr('disabled','disabled');$('#poll_content').load('{% url ureport.views.best_visualization p.pk %}')">
+                                   onclick="clear_layers();$('.poll_selectors').attr('disabled','');$(this).attr('disabled','disabled');$('#poll_content').load('{% url ureport.views.best_visualization p.pk %}')">
                                 {{ p.name }}
                                 </a>
                             </li>
