--- a/ureport/templates/ureport/partials/tag_cloud/tag_cloud.html
+++ b/ureport/templates/ureport/partials/tag_cloud/tag_cloud.html
@@ -11,13 +11,13 @@
                 onmouseout="$(this).next().attr('class', 'default')"
             {% endif %}
             rel="tag"
-            class="tag_link" href="javascript:void(0)">{{ tag.tag }}</a>{% if user.is_authenticated %}<span class="default" onmouseover="$(this).attr('class', 'delete-tag-hover')" onmouseout="$(this).attr('class', 'default')" title="remove {{ tag.tag }}" onclick="add_tag('{{ poll.pk }}', '{% url ureport.views.add_drop_word tag.tag poll.pk %}', '{% url ureport.views.tag_cloud poll.pk %}')"></span>{% endif %}
+            class="tag_link" href="javascript:void(0)">{{ tag.tag }}</a>{% if user.is_authenticated %}<span class="default" onmouseover="$(this).attr('class', 'delete-tag-hover')" onmouseout="$(this).attr('class', 'default')" title="remove {{ tag.tag }}" onclick="add_tag( '{% url ureport.views.add_drop_word tag.tag poll.pk %}', '{% url ureport.views.tag_cloud poll.pk %}')"></span>{% endif %}
     </tt>
 {%  endfor %}
 </div>
 {% if user.is_authenticated %}
 <p>
-    <a onclick="load_excluded_tags({{ poll_id }}, '{% url ureport.views.show_ignored_tags poll_id %}')" href="javascript:void(0)">edit excluded tags</a>
+    <a onclick="load_excluded_tags('{% url ureport.views.show_ignored_tags poll_id %}')" href="javascript:void(0)">edit excluded tags</a>
 </p>
 <div id="excluded" style="display:none">
 </div>
