--- a/ureport/templates/ureport/contacts_base.html
+++ b/ureport/templates/ureport/contacts_base.html
@@ -2,7 +2,13 @@
 {% block title %}
     uReporters - {{ block.super }}
 {% endblock %}
-
+{% block stylesheets %}
+    <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css" />
+    <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/splits.css" />
+    <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
+    <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
+    <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}generic/stylesheets/generic.css"/>
+{% endblock %}
 {% block javascripts %}
     {{ block.super }}
     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
