[Fixes #17213099] andded eport link

--- a/ureport/templates/ureport/partials/polls/poll_partial_base.html
+++ b/ureport/templates/ureport/partials/polls/poll_partial_base.html
@@ -26,6 +26,11 @@
     {{ block.super }}
 {% endblock %}
 {% block partial_base_content %}
+    <div class="buttons">
+        <a href="{% url poll.views.responses_as_csv object_list.0.poll.pk %}">
+            <img src="{{ MEDIA_URL }}poll/icons/silk/table_save.png" alt=""/> Export
+        </a>
+    </div>
     {% for response in object_list %}
 
         <tr class="row_{% cycle 'reg' 'alt' %}">
