--- a/ureport/templates/ureport/partials/polls/poll_partial_base.html
+++ b/ureport/templates/ureport/partials/polls/poll_partial_base.html
@@ -26,13 +26,13 @@
     {{ block.super }}
 {% endblock %}
 {% block partial_base_content %}
-<a href="javascript:void(0)">
+<a onclick="$(this).next('.responses_meta').slideToggle(500);$('#collapse_img').toggle();$('#expand_img').toggle();" href="javascript:void(0)">
  Response rates
-     <img id="collapse_img" style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/section_expanded--bright.png" onclick="$('.responses_meta').hide();$('#expand_img').show();$('#collapse_img').hide();"/>
-     <img id="expand_img" style="float:left;display:none" src="{{ MEDIA_URL }}rapidsms/icons/silk/section_collapsed--bright.png" onclick="$('.responses_meta').show();$('#collapse_img').show();$('#expand_img').hide();"/>
+     <img id="collapse_img" style="float:left" src="{{ MEDIA_URL }}rapidsms/icons/silk/section_expanded--bright.png" />
+     <img id="expand_img" style="float:left;display:none" src="{{ MEDIA_URL }}rapidsms/icons/silk/section_collapsed--bright.png" />
     </a>
 
-    <div class="responses_meta ">
+    <div class="responses_meta " style="display:none;">
 
     <h2 class="collapsed">Responses</h2>
     <h4>{{ object_list.0.poll.question }}</h4>
