--- a/ureport/templates/ureport/partials/tag_cloud/tag_cloud.html
+++ b/ureport/templates/ureport/partials/tag_cloud/tag_cloud.html
@@ -1,7 +1,7 @@
 <div id="tags" class="tags">
 <style type="text/css">
 .delete-tag,.delete-tag-hover{
-    <!--FIXME: need to find a better way to do this    -->
+    
     background-image:url("http://ureport.ug/static/ureport/images/delete_tag.png");
     background-repeat:no-repeat;
     width:14px;
@@ -23,7 +23,62 @@
 .delete-tag-hover {
     cursor:pointer;
     background-position:0 -4px;
-    }
+}
+tt a {
+    text-decoration:none;
+}
+
+.tags {
+    line-height:3em;
+}
+.tag1 {
+    font-size: .8em;
+}
+
+.tag2 {
+    font-size: 1em;
+}
+
+.tag3 {
+    font-size: 1.2em;
+}
+
+.tag4 {
+    font-size: 1.6em;
+}
+
+.tag5 {
+    font-size: 2.0em;
+}
+
+.tag6 {
+    font-size: 2.8em;
+}
+
+.tag7 {
+    font-size: 3.6em;
+}
+
+#tag_cloud {
+    width: 400px;
+    padding: 1em;
+}
+
+#tag_cloud tt {
+    display: block;
+    text-align: center;
+    padding-top: 0em;
+    float: left;
+}
+#tags a{
+    color:#000000;
+    padding:0;
+}
+
+#tags p>a{
+    color: #aad0d4;
+}
+
     </style>
 <div id="tagcontent">
 {% for tag in tags%}
