--- a/ureport/templates/ureport/partials/messages/flagged_message_row.html
+++ b/ureport/templates/ureport/partials/messages/flagged_message_row.html
@@ -25,11 +25,10 @@
 </td>
 
 <td>
-   {% for mf in   object.message.flags.all %}
-<ul >
- <li><a href="/flags/{{ mf.flag.pk }}/messages/"/> {{ mf.flag.name }}</a></li>
-       </ul>
-{% endfor %}
+
+
+ <a href="/flags/{{ object.flag.pk }}/messages/"/> {{ object.flag.name }}</a>
+
 
 </td>
 {% endblock %}
