ureporters export link & mobo

--- a/ureport/templates/ureport/ureporters_base.html
+++ b/ureport/templates/ureport/ureporters_base.html
@@ -66,4 +66,5 @@
                             </div>
                         {% endif %}
                     {% endfor %}
+     <a href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.xls">Export All To Excel</a>
                 {% endblock %}
