--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -1,5 +1,26 @@
 {% extends "home_layout.html" %}
 
 {% block content %}
+ <div class="sidebar" style="padding-top:26px;">
+        <nav class="nav-side">
+            <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Poll Results</a></li>
+            <li><a href="#">About UReport</a></li>
+            <li><a href="#">How to Join</a></li>
+            </ul>
+        </nav>
 
+        <div class="intro">
+            <blockquote>
+            <p>
+                Ureport is a free SMS-based system that allows young Ugandans to speak out on what's happening
+                in communities across the country, and work together with other community leaders for positive change.
+            </p>
+                </blockquote>
+        </div>
+        <div class="join">
+            <img src="images/join_us.png"/>
+        </div>
+    </div>
 {%endblock%}
